<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_theme_3"
        android:orientation="vertical"
        tools:context=".ui.view.UserInfo">

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginTop="32dp"
            android:text="@string/app_name"
            android:textColor="@color/main_theme"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/startPage"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="30dp"
                android:text="@string/startPage"
                android:textSize="12sp" />

            <Button
                android:id="@+id/singOut"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:text="@string/singOut"
                android:textSize="12sp" />

        </LinearLayout>


    </LinearLayout>


</layout>

