<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.MainActivity"
        tools:openDrawer="end">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_theme"
            tools:context=".ui.view.MainActivity">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent">

                <ImageButton
                    android:id="@+id/buttonMain"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:onClick="change"
                    android:paddingBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/buttonHistory"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_home_24"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

                <ImageButton
                    android:id="@+id/buttonHistory"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:onClick="onClickHistory"
                    android:paddingBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/buttonBasket"
                    app:layout_constraintStart_toEndOf="@+id/buttonMain"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_access_time_24"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/buttonBasket"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:onClick="change"
                    android:paddingBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/buttonStock"
                    app:layout_constraintStart_toEndOf="@+id/buttonHistory"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_shopping_cart_24"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/buttonStock"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:onClick="change"
                    android:paddingBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/buttonOpen"
                    app:layout_constraintStart_toEndOf="@+id/buttonBasket"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.428"
                    app:srcCompat="@drawable/ic_baseline_redeem_24"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/buttonOpen"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttonStock"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_more_horiz_24"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/txtMain"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/home"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txtHistory"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/txtHistory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/history"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txtBasket"
                    app:layout_constraintStart_toEndOf="@+id/txtMain" />

                <TextView
                    android:id="@+id/txtBasket"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/basket"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txtStock"
                    app:layout_constraintStart_toEndOf="@+id/txtHistory" />

                <TextView
                    android:id="@+id/txtStock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/stock"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txtMore"
                    app:layout_constraintStart_toEndOf="@+id/txtBasket" />

                <TextView
                    android:id="@+id/txtMore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/menu"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txtStock" />


                <ImageView
                    android:id="@+id/circleAllCountBasket"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/circle_blue_all"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/buttonBasket"
                    app:layout_constraintTop_toTopOf="@+id/buttonBasket" />

                <TextView
                    android:id="@+id/allCountBasket"
                    android:layout_width="25dp"
                    android:layout_height="18dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text=""
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/buttonBasket"
                    app:layout_constraintTop_toTopOf="@+id/buttonBasket" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <fragment
                android:id="@+id/fragMain"
                android:name="com.ksusha.vel.waterkotlin.ui.fragment.MainFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"></fragment>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            app:itemIconTint="@android:color/darker_gray"
            app:itemTextColor="@android:color/darker_gray"
            app:menu="@menu/options" />


    </androidx.drawerlayout.widget.DrawerLayout>

</layout>
