<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_theme_1"
        tools:context=".ui.fragment.MainFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="188dp"
                android:layout_height="54dp"
                android:src="@drawable/brand"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageAuthentication"
                android:layout_width="42dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/ic_baseline_person_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/topRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-520dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainConstr"
                android:layout_width="match_parent"
                android:layout_height="520dp"
                android:background="@drawable/rectangle_rounded_some"
                android:elevation="8dp"
                app:behavior_hideable="false"
                app:behavior_peekHeight="480dp"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/waterRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="45dp"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_scrollFlags="scroll|enterAlways" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/imageButtonWater"
                        android:layout_width="91dp"
                        android:layout_height="36dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="23dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/montserrat_medium"
                        android:padding="-1sp"
                        android:state_pressed="false"
                        android:text="@string/categ1"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toStartOf="@+id/imageButtonAxes"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/imageButtonAxes"
                        android:layout_width="91dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="23dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="23dp"
                        android:background="@drawable/category_button"
                        android:fontFamily="@font/montserrat_medium"
                        android:padding="-1sp"
                        android:text="@string/categ2"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/imageButtonCool"
                        android:layout_width="91dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="23dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="23dp"
                        android:background="@drawable/category_button"
                        android:fontFamily="@font/montserrat_medium"
                        android:padding="-1sp"
                        android:text="@string/categ3"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageButtonAxes"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </FrameLayout>

</layout>
